--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,21 @@
-<p>grafica1 works!</p>
+<div class="row">
+    <div class="col-6">
+        <app-dona title="Ventas"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona [labels]="labels1"
+        title="Compras"></app-dona>
+    </div>
+    <!-- [data]="data1" -->
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <app-dona title="Cambios"></app-dona>
+    </div>
+
+    <div class="col-6">
+        <app-dona title="Ofertas"></app-dona>
+    </div>
+</div>
